Deployments/ingress-zoombingo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bingo
  annotations:
    kubernetes.io/ingress.class: public
spec:
  defaultBackend:
    service:
      name: bingo
      port:
        number: 3000
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bingo
            port:
              number: 3000
